# zev-view

./: README.md  gh-pages.sh  index.html  package-lock.json  package.json  svelte.config.js  view.html  vite.config.ts  zeldaevent_js_bg.wasm
_app/: error.svelte-09fd4a04.js  manifest.json  start-b65340b5.js  version.json
_app/chunks/: vendor-76666090.js  zev-src-3be54adc.js
_app/immutable/assets/: _page.a1df08f8.css
_app/immutable/chunks/: index.4bb65ed1.js  paths.eca2aec5.js  scheduler.037f7bd6.js  singletons.08d26bb4.js  stores.dcf0d695.js  zev-src.a9f67a5d.js
_app/immutable/entry/: app.727cf2c3.js  start.691d84ef.js
_app/immutable/nodes/: 0.e69c7cbb.js  1.f448a5a1.js  2.77881604.js  3.31d30ac9.js
_app/pages/: __layout.svelte-31143161.js  index.svelte-600c830f.js  view.svelte-03bb6b2d.js
src/: app.html
src/lib/: NameAccordeon.svelte  ZevGraphviz.svelte  zev-src.ts
src/routes/: +page.svelte  __layout.svelte  index.svelte  view.svelte
src/routes/view/: +page.svelte
src/routes/view/[eventfile]/: [eventname].svelte  index.svelte
static/: zeldaevent_js_bg.wasm
zev-native/: Cargo.toml
zev-native/src/: lib.rs
