[package]
name = "zeldaevent-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# assumes https://github.com/lepelog/zeldaevent to be in a specific directory
# edit if necessary
zeldaevent = { path = "../../zeldaevent" }
wasm-bindgen = "0.2.79"
serde_json = { version = "1.0.79" }
